{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 46,
  "lineage": "54daf54e-cc05-bd32-50f1-925a02b2d2ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-063316e74d91e5c26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063316e74d91e5c26",
            "ingress": [],
            "name": "demoaks-lambda-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "sg-063316e74d91e5c26",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-0bec73a52817518b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bec73a52817518b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063316e74d91e5c26"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "demoaks-redis-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "sg-0bec73a52817518b5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:security-group/sg-08c65902bd69a7976",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c65902bd69a7976",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063316e74d91e5c26"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demoaks-vpce-sg",
            "name_prefix": "",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "sg-08c65902bd69a7976",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-00b7ac8b634f993ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b7ac8b634f993ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "demoaks-priv-a"
            },
            "tags_all": {
              "Name": "demoaks-priv-a"
            },
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "subnet-00b7ac8b634f993ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:subnet/subnet-0b739c8c02b3d13a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.42.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b739c8c02b3d13a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273505519511",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "demoaks-priv-b"
            },
            "tags_all": {
              "Name": "demoaks-priv-b"
            },
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "subnet-0b739c8c02b3d13a0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc/vpc-06ce9e6f92017ab69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0c797735cb4c98dfa",
            "default_route_table_id": "rtb-0a1c9713f7b5fff1b",
            "default_security_group_id": "sg-080ebef53f0e06e7e",
            "dhcp_options_id": "dopt-0976e74362cde68ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ce9e6f92017ab69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1c9713f7b5fff1b",
            "owner_id": "273505519511",
            "region": "ap-south-1",
            "tags": {
              "Name": "demoaks-vpc"
            },
            "tags_all": {
              "Name": "demoaks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interfaces",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "athena",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc-endpoint/vpce-04aa0c560fccf2aa0",
            "dns_entry": [
              {
                "dns_name": "vpce-04aa0c560fccf2aa0-5f6r3hpq.athena.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-04aa0c560fccf2aa0-5f6r3hpq-ap-south-1a.athena.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "athena.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z05176523JA3ND5N6WQFC"
              },
              {
                "dns_name": "athena.ap-south-1.api.aws",
                "hosted_zone_id": "Z02968171XOCD4S7WIDBS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04aa0c560fccf2aa0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f9914b742aa3e892"
            ],
            "owner_id": "273505519511",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08c65902bd69a7976"
            ],
            "service_name": "com.amazonaws.ap-south-1.athena",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.228",
                "subnet_id": "subnet-00b7ac8b634f993ff"
              }
            ],
            "subnet_ids": [
              "subnet-00b7ac8b634f993ff"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpce-04aa0c560fccf2aa0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "glue",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc-endpoint/vpce-034df7f3a79d6c123",
            "dns_entry": [
              {
                "dns_name": "vpce-034df7f3a79d6c123-d5rhq4mz.glue.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-034df7f3a79d6c123-d5rhq4mz-ap-south-1a.glue.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "glue.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z00689523AG0VIKFPSN79"
              },
              {
                "dns_name": "glue.ap-south-1.api.aws",
                "hosted_zone_id": "Z08844512NGQQOZO92R44"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-034df7f3a79d6c123",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b37b297908341ec4"
            ],
            "owner_id": "273505519511",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08c65902bd69a7976"
            ],
            "service_name": "com.amazonaws.ap-south-1.glue",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.134",
                "subnet_id": "subnet-00b7ac8b634f993ff"
              }
            ],
            "subnet_ids": [
              "subnet-00b7ac8b634f993ff"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpce-034df7f3a79d6c123",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc-endpoint/vpce-027e6422b6da687de",
            "dns_entry": [
              {
                "dns_name": "vpce-027e6422b6da687de-5l0x2zhg.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-027e6422b6da687de-5l0x2zhg-ap-south-1a.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z00778362OFD5PE7LE9BZ"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z05238744GRLW87VOQG5"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z08773253PYWUDNU7AT4I"
              },
              {
                "dns_name": "logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z08838213KWPN78WR7CTC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-027e6422b6da687de",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f14745e0344aad3b"
            ],
            "owner_id": "273505519511",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08c65902bd69a7976"
            ],
            "service_name": "com.amazonaws.ap-south-1.logs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.24",
                "subnet_id": "subnet-00b7ac8b634f993ff"
              }
            ],
            "subnet_ids": [
              "subnet-00b7ac8b634f993ff"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpce-027e6422b6da687de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc-endpoint/vpce-0f4f7608ffd91e262",
            "dns_entry": [
              {
                "dns_name": "vpce-0f4f7608ffd91e262-8habij6f.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0f4f7608ffd91e262-8habij6f-ap-south-1a.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "sts.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z0307823DMHX0GFHEQHE"
              },
              {
                "dns_name": "sts.ap-south-1.api.aws",
                "hosted_zone_id": "Z08836722N0RHEFYM4JO7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f4f7608ffd91e262",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bcc0ce7bcec645b7"
            ],
            "owner_id": "273505519511",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08c65902bd69a7976"
            ],
            "service_name": "com.amazonaws.ap-south-1.sts",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.42.1.245",
                "subnet_id": "subnet-00b7ac8b634f993ff"
              }
            ],
            "subnet_ids": [
              "subnet-00b7ac8b634f993ff"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpce-0f4f7608ffd91e262",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.vpce",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:273505519511:vpc-endpoint/vpce-0b548a503bffb7e59",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-0b548a503bffb7e59",
            "owner_id": "273505519511",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-south-1",
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06ce9e6f92017ab69"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "273505519511",
            "id": "vpce-0b548a503bffb7e59",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}